Taking out asnwers in first 2 notebooks to use in live coding

--- a/1. Intro to Pandas.ipynb
+++ b/1. Intro to Pandas.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "float(16)"
+    "#float"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "int(16)"
+    "#int"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "str(16)"
+    "#str"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bool(16)"
+    "#bool"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bool(0)"
+    "#bool"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bool(None)"
+    "#bool"
    ]
   },
   {
@@ -198,9 +198,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -214,9 +212,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -230,9 +226,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.tail(3)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -246,9 +240,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -263,9 +255,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.shape[0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -281,9 +271,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.dtypes"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -297,9 +285,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.describe()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -320,9 +306,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.columns"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -336,9 +320,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.index"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -352,18 +334,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "type(wine.values)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.values[0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -386,8 +364,7 @@
    },
    "outputs": [],
    "source": [
-    "# 1. With quotes\n",
-    "wine['price']"
+    "# 1. With quotes\n"
    ]
   },
   {
@@ -398,8 +375,7 @@
    },
    "outputs": [],
    "source": [
-    "# 2. With period (NOTE - ONLY works when column names have no spaces!)\n",
-    "wine.price"
+    "# 2. With period (NOTE - ONLY works when column names have no spaces!)\n"
    ]
   },
   {
@@ -414,9 +390,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.price.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -439,18 +413,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.iloc[:5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.loc[:5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -477,31 +447,21 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "random_index = random.sample(list(wine.index), k=len(list(wine.index)))\n",
-    "wine['scrambled_index'] = random_index\n",
-    "scrambled_wine = wine.set_index('scrambled_index')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# returns all rows up to the 5th position.\n",
-    "scrambled_wine.iloc[:5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# returns all rows up to where #5 is in the index. Since we scrambled it, this is no longer in the 5th position.\n",
-    "scrambled_wine.loc[:5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -515,9 +475,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "scrambled_wine.iloc[:5, :5]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
