--- a/2. Summarizing, Aggregating and Grouping.ipynb
+++ b/2. Summarizing, Aggregating and Grouping.ipynb
@@ -63,9 +63,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.columns"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -79,9 +77,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine['price'].tail()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -95,12 +91,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('Average wine price: ', wine['price'].mean())\n",
-    "print('Min wine price: ', wine['price'].min())\n",
-    "print('Median wine price: ', wine['price'].median())\n",
-    "print('Max wine price: ', wine['price'].max())"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -116,9 +107,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "wine['country'].value_counts().sort_index()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -134,36 +123,28 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "wine['country'].value_counts().sort_values(ascending=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine['country'].count()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.shape[0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.groupby('country')['description'].count()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -180,18 +161,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine[['country', 'price']].iloc[:10]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine['country'].value_counts().head(10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -206,8 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of non-null unique values\n",
-    "wine['country'].nunique()"
+    "# Number of non-null unique values\n"
    ]
   },
   {
@@ -224,8 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gives all unique values\n",
-    "set(wine['country'])"
+    "# Gives all unique values\n"
    ]
   },
   {
@@ -247,9 +222,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine.describe()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -280,21 +253,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "us = wine[wine['country']=='US']\n",
-    "france = wine[wine['country']=='France']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('Mean American wine price: $', round(us['price'].mean(),2))\n",
-    "print('Mean French wine price: $', round(france['price'].mean(),2))\n",
-    "print('Mean overall wine price is: $', round(wine['price'].mean(),2))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -308,9 +274,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('French wine is ${} more expensive on average'.format(round(france['price'].mean() - wine['price'].mean(),2)))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -327,20 +291,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "na_mask = (wine.country == 'US') | (wine.country == 'Mexico') | (wine.country == 'Canada') \n",
-    "na_indexes = wine.index[na_mask]\n",
-    "na = wine.loc[na_indexes]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wine[na_mask]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -354,18 +312,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "na['country'].count()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "na.count()['country']"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -410,9 +364,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "wine.groupby('country').mean().sort_values(by=['points','price'], ascending=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -437,9 +389,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "wine.groupby('country').agg({'points':'max', 'price':'mean'}).sort_values(by=['points','price'], ascending=[False, True]).head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -453,14 +403,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "aggs = {\n",
-    "    'price': 'mean',\n",
-    "    'points': 'max'\n",
-    "}\n",
-    "\n",
-    "wine.groupby('country').agg(aggs).sort_values(by=['points','price'], ascending =[False, True]).head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -478,14 +421,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "aggs = {\n",
-    "    'price': ['min', 'mean', 'max', 'std']\n",
-    "}\n",
-    "\n",
-    "price_table = wine.groupby('country').agg(aggs)\n",
-    "price_table"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -501,12 +437,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "price_table.columns = price_table.columns.droplevel(level=0)\n",
-    "\n",
-    "# now, we can sort by any of the columns. Here, by average price.\n",
-    "price_table.sort_values(by='mean', ascending=False).head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -520,31 +451,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "price_table = wine.groupby('country').agg(aggs)\n",
-    "\n",
-    "price_table.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "price_table.columns"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Using ravel, and a string join, we can create better names for the columns:\n",
-    "price_table.columns = [\"_\".join(x) for x in price_table.columns.ravel()]\n",
-    "price_table.sort_values(by='price_mean', ascending=False).head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -575,9 +496,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "price_table.loc[:, 'price_std'].idxmax()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -620,9 +539,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "energy.index"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -637,9 +554,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "energy.loc['1998-12-31 01:00:00':'1999-01-01 00:00:00']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -647,8 +562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One record for each hour of this day.\n",
-    "energy.loc['1998-12-31 01:00:00':'1999-01-01 00:00:00', :].shape[0]"
+    "# One record for each hour of this day.\n"
    ]
   },
   {
@@ -673,10 +587,7 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "\n",
-    "s = \"8 March, 2017\"\n",
-    "d = datetime.strptime(s, '%d %B, %Y')\n",
-    "print(d.strftime('%Y-%m-%d'))"
+    "\n"
    ]
   },
   {
@@ -684,18 +595,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "energy.loc[:, 'column_date'] = energy.index"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "energy.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -705,8 +612,7 @@
    },
    "outputs": [],
    "source": [
-    "# making a new DF that only includes the month of septmeber from each year.\n",
-    "septembers = energy[energy.index.month == 9]"
+    "# making a new DF that only includes the month of septmeber from each year.\n"
    ]
   },
   {
@@ -723,9 +629,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "energy['2000-01-03']"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -739,8 +643,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "energy['2000-01'].shape"
+    "# We see that it includes one record for each our of each day of the month of January, which has 31 days\n"
    ]
   },
   {
@@ -749,19 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We see that it includes one record for each our of each day of the month of January, which has 31 days\n",
-    "31*24"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# or better, with an assert statement:\n",
-    "month_jan = energy['2000-01']\n",
-    "assert month_jan.shape[0] == 31*24"
+    "# or better, with an assert statement:\n"
    ]
   },
   {
@@ -781,9 +680,7 @@
    },
    "outputs": [],
    "source": [
-    "# We can get the average load over a day:\n",
-    "daily_avg_energy = energy.resample('D').mean()\n",
-    "daily_avg_energy.head()"
+    "# We can get the average load over a day:\n"
    ]
   },
   {
@@ -792,10 +689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can also get the total MWh used in a day:\n",
-    "daily_energy = energy.resample('D').sum()\n",
-    "daily_energy.columns = [\"PJM_Load_MWh\"]\n",
-    "daily_energy.head()"
+    "# We can also get the total MWh used in a day:\n"
    ]
   },
   {
@@ -812,24 +706,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "indexes = [energy.index.year,\n",
-    "           energy.index.month,\n",
-    "           energy.index.week,\n",
-    "           energy.index.weekday,\n",
-    "           energy.index.day]\n",
-    "\n",
-    "aggregated = energy.groupby(indexes).sum()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "aggregated.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -844,12 +728,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the long, ugly way\n",
-    "aggregated.index.set_names('year', level=0, inplace=True)\n",
-    "aggregated.index.set_names('month', level=1, inplace=True)\n",
-    "aggregated.index.set_names('week', level=2, inplace=True)\n",
-    "aggregated.index.set_names('weekday', level=3, inplace=True)\n",
-    "aggregated.index.set_names('day', level=4, inplace=True)"
+    "# the long, ugly way\n"
    ]
   },
   {
@@ -858,10 +737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the short, clean way. Both do the same thing.\n",
-    "index_level_names = ['year', 'month', 'week', 'weekday', 'day']\n",
-    "for i, index_level in enumerate(index_level_names):\n",
-    "            aggregated.index.set_names(index_level, level=i, inplace=True)"
+    "# the short, clean way. Both do the same thing.\n"
    ]
   },
   {
@@ -871,9 +747,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "aggregated.head(50)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -889,10 +763,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "energy_2000 = aggregated.loc[(slice(2000,2000), [slice(2,2), slice(4,4)], slice(None), slice(None)), :]\n",
-    "energy_2000"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -906,9 +777,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "energy_christmas = aggregated.loc[(slice(None), slice(None), slice(52,52), slice(None), slice(None)), :]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -917,9 +786,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "energy_christmas"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -937,10 +804,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "energy_christmas.groupby(level=0).sum()\n",
-    "# or, energy_christmas.groupby(level='year').sum()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -954,10 +818,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "energy_christmas.groupby(level=0).sum().plot(kind='bar')\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1009,20 +870,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "aggregated_new = aggregated.reset_index()\n",
-    "aggregated_new.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "energy_christmas_new = aggregated_new[aggregated_new['week']==52]\n",
-    "energy_christmas_new"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1131,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
