--- a/0. Introduction.ipynb
+++ b/0. Introduction.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# About Me:\n",
-    "## DSR Alum (Batch 12), Data Science Consultant: [pmOne](https://www.pmone.com) \n",
+    "## DSR Alum (Batch 12), Data Scientist : [50 Hertz](https://www.50hertz.com) \n",
     "### Previously: Manager - Analytics & Customer Performance & Data Scientist at Tempus Energy\n",
     "Time series problems (price prediction for energy), analysis, visualizations & reporting.\n",
     "\n",
