removing section on multi-index slicing. Adding sections on merging and concatentation. Adding filled-in notebooks for live coding.

--- a/2. Summarizing, Aggregating and Grouping.ipynb
+++ b/2. Summarizing, Aggregating and Grouping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,22 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "wine = pd.read_csv('data/wine_reviews/winemag-data_first150k.csv', index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer to exercise from notebook 1:\n",
-    "\n",
-    "\n",
-    "`scrambled_wine[['points', 'region_1']].iloc[:5] \n",
-    "`"
    ]
   },
   {
@@ -97,7 +86,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And some more advanced metrics.."
+    "And some more advanced metrics...\n",
+    "\n",
+    "We can see how many times each country appears in the datast (called a value count)"
    ]
   },
   {
@@ -126,31 +117,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both of these lists are too long. What if we only want to see the top 10 countries?\n",
+    "This list is too long. What if we only want to see the top 10 countries?\n",
     "We can string together the other selectors we learned before!\n",
     "\n",
     "Can you think of another way to get the top 10 rows?"
@@ -174,12 +144,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What if we just want to know how many countries are on the list?"
+    "What's the difference between `.value_counts()` and `.count()`?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What if we just want to know how many countries are on the list?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of the most powerful built-in summary tools for pandas is `df.describe()`. This quickly calculates some of these stats for the numeric columns in the df."
+    "Remember, for quick calculation of summary statistics we can use `df.describe()`. This quickly calculates some of these stats for the numeric columns in the df."
    ]
   },
   {
@@ -256,11 +240,22 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's compare the difference in average price between US wines, French wines, and all the wines in our complete dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calculating average wine prices \n",
+    "\n",
+    "# printing prices\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,9 +276,21 @@
    "metadata": {},
    "source": [
     "#### More advanced conditionals: Using masks\n",
+    "What if we want to filter on more than one criteria? \n",
+    "\n",
     "When you want to filter on >1 criteria, it can be easier to use a mask.\n",
     "\n",
     "How many wines from North America do we have on our list?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# or\n"
    ]
   },
   {
@@ -309,10 +316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# taking one of the columns that had no null values to get \"real\" count\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: How many of the wines belong to each country?\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -325,10 +342,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** How many of the wines belong to each country?\n",
-    "\n",
-    "**Question:** From which US state do most of our wines come?"
+    "**Question**: From which US state do most of our wines come?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -341,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +376,11 @@
    "metadata": {},
    "source": [
     "### How Groupby Works:\n",
-    "You can group your data in many different ways, and also aggregate it by any of the aggregators we saw before: like mean, mode, sum, etc."
+    "You can group your data in many different ways, and also aggregate it by any of the aggregators we saw before: like mean, mode, sum, etc.\n",
+    "\n",
+    "**The column that you put in the parentheses of the groupby function call will become your new index in the dataframe that is returned by groupby!!**\n",
+    "\n",
+    "For example, in `wine.groupby('country')`, `country` will bee the new index. Let's see how this looks in practice:"
    ]
   },
   {
@@ -448,24 +474,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# resetting the price table, so that it again has a multi-index\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# seeing how the column names are multi-index\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Using ravel, and a string join, we can create better names for the columns:\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -519,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,11 +590,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One record for each hour of this day.\n"
+    "# One record for each hour of this day.\n"
    ]
   },
   {
@@ -570,7 +602,11 @@
    "metadata": {},
    "source": [
     "## Selecting with boolean indexing on pandas datetimeindex\n",
-    "We can use .dot notation with conditionals to select on specific parts of the datetime, like days or months."
+    "We can use .dot notation with parts of the date to select on specific parts of the datetime, like days or months.\n",
+    "\n",
+    "This is because pandas datetime indexes are datetime objects under the hood.\n",
+    "\n",
+    "Let's look more closely at datetime objects in python."
    ]
   },
   {
@@ -582,12 +618,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "\n"
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will start with a string of a date, and save this string in a variable called `s`."
    ]
   },
   {
@@ -598,6 +640,20 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using a datetime function called `datetime.strptime()`, we can \"extract\" the date elements from this string.\n",
+    "\n",
+    "We do this by giving formatting indicators as to where in the string the various datetime elements are located. The format indicator `%d` denotes an integer day, `%B` denotes a long-form month written in English, and `%Y` denotes a 4-digit year.\n",
+    "\n",
+    "You can find more datetime format indicators in python [here](https://mkaz.blog/code/python-dates/) (under \"Datetime Format Table\").\n",
+    "\n",
+    "\n",
+    "Using the `.strptime()` function returns a **datetime object**, with the parts of the datetime contained in order from lowest time-granularity to highest (year --> seconds)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -605,8 +661,43 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As mentioned before, we can access particular parts of this datetime object using dot notation (as they are stored as attributes of the object)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can then use a second function from datetime, called `strftime()`, to convert this datetime object back to a string. Here, we have to specify the new string format we would like the new date string to have."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we know about the various parts of a datetime object, we can use them to filter conditionally on the datetime object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {
     "scrolled": true
    },
@@ -647,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,11 +747,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# or better, with an assert statement:\n"
+    "# or better, with an assert statement:\n",
+    "\n",
+    "\n",
+    "# assert passes silently, meaning it is True\n"
    ]
   },
   {
@@ -674,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "scrolled": true
    },
@@ -685,11 +779,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can also get the total MWh used in a day:\n"
+    "# We can also get the total MWh used in a day:\n",
+    "\n",
+    "# have to change unit from MW to MWh since summing changes measure from power to energy \n",
+    "# more info on that here: https://energyeducation.ca/encyclopedia/Energy_vs_power\n"
    ]
   },
   {
@@ -724,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,10 +830,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# resetting the df to get multi-index again\n",
+    "\n",
+    "\n",
     "# the short, clean way. Both do the same thing.\n"
    ]
   },
@@ -753,116 +853,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Selecting on Multi-Index: Using Slice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Or, say we want to know what Christmas week looked like across all the years for which we have data.."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also then use a groupby again!\n",
-    "\n",
-    "Note that here, we're using a groupby on the index level."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we can plot by these levels!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Question:** See what just writing \"52\" in the slice box does."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Question**: Select Christmas week, but only for years 1998-2000."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Question**: Which week is christmas in all of the years?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Selecting on Multi-Index: Using reset_index()\n",
-    "The `slice` method in pandas can be difficult to work with and read. Often times, it can be easier to work with these as \"normal\" pandas DataFrame columns.\n",
+    "Selecting via a multi-index is difficult. It is much easier to work with these as \"normal\" pandas DataFrame columns.\n",
     "\n",
-    "As an example, we'll select the Christmas week the same way we did with the slice command above. "
+    "To transform multi-indexes in to columns, we use `reset_index()`. Reset index pushes anything in the index into columns, and makes a new index with is simply an ascending count, starting at 0. "
    ]
   },
   {
@@ -871,6 +865,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we can select all rows that were in week 50 in any year."
+   ]
   },
   {
    "cell_type": "code",
@@ -884,7 +885,6 @@
    "metadata": {},
    "source": [
     "## Exercise:\n",
-    "- Find the week (and its associated year) with the highest total weekly consumption.\n",
     "\n",
     "- Find the day of the week that averages the highest consumption\n",
     "\n",
@@ -895,22 +895,6 @@
     "- Is average consumption rising, falling, or staying the same over the years?\n",
     "- What is the %age difference in consumption on average between April and June?"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Find the week (and its associated year) with the highest total weekly consumption."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -972,7 +956,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -986,7 +970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
